# Wwizard

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml  codeql.yml  msvc.yml  theBuild.yml
Best-Practices/: README.md
Command-Add-Ons/: README.md  ak_addons.json  autosort_originals.py  delete_empty_events.py  reset_volume_fader.py  reset_volume_faders.py
Command-Add-Ons/autosort originals/: autosort_originals.py  remove_dir.py
Naming-Convention/: README.md
Wwise Extension/: GUI.py  MyQuery.py  README.md  init.py  main.py  requirements.txt
Wwise Extension/Core/: Core.py  Eventhandler.py  HelperFunctions.py
Wwise Extension/Data/: CustomColours.py  CustomQueries.json  ModuleEnum.py  Settings.json
Wwise Extension/ExtensionModules/QueryModule/: Query.py  QueryModule.py
Wwise Extension/GUI/: CustomTreeview.py  GUI.py
Wwise Extension/Settings/: Settings.py
Wwizard/: CMakeLists.txt  README.md  Wwizard.sln
Wwizard/SavedData/: ColorSettings.json  CustomQueries.json  NamingConventionSettings.json  Settings.json  imgui.ini  test.json
Wwizard/SavedData/NamingConventions/: Default.json  DefaultNamingConventionSettings.json  a.json  asd.json  asd.json.json  hi.json  new.json
Wwizard/Tests/: Tests.vcxproj
Wwizard/UnitTest/: ResultFileTest.cpp  UnitTest.vcxproj  UnitTest.vcxproj.filters
Wwizard/Wwizard/: Application.cpp  Application.h  BaseLayout.h  BaseModule.cpp  BaseModule.h  BaseQueryStructure.h  ColorCodingLayout.cpp  ColorCodingLayout.h  ColorCodingModule.cpp  ColorCodingModule.h  ColorResult.h  ColorSetting.h  ColorSettingMode.h  ContainerSetting.h  Dockspace.cpp  Dockspace.h  GUI.cpp  GUI.h  GuiHelper.h  HomeLayout.cpp  HomeLayout.h  Issues.h  MyNode.h  NamingConventionLayout.cpp  NamingConventionLayout.h  NamingConventionModule.cpp  NamingConventionModule.h  NamingIssues.h  NamingSetting.h  QueryEditorLayout.cpp  QueryEditorLayout.h  QueryEditorModule.cpp  QueryEditorModule.h  QueryHelper.cpp  QueryHelper.h  QueryType.h  ResultFile.h  SettingHandler.cpp  SettingHandler.h  SettingLayout.cpp  (+22 more)
